@@ -4,6 +4,8 @@ Version 1.11.14+dev:
  * Miscellaneous and bug fixes:
    * Reallow selection of another unit on same side without deselect first
    * Fix bug #22042: filesystem content disclosure issue affecting Lua APIs
+   * Fix bug #21867: team flag colors not refreshed after making use of
+     [modify_side] color= unless a new flag set is also provided.
 
 Version 1.11.14:
  * Campaigns:
